# trion-practive

./: README.md  benchmark_conv3d.py  conv3d-performance-N2-Cin32-Cout64-k3.csv  conv3d-performance-N2-Cin32-Cout64-k3.swizzle.csv  conv3d-realistic-N2-Cin32-Cout64-k3.csv  conv3d-symmetric-N2-Cin32-Cout64-k3.csv  conv3d_triton.py  main.py  pyproject.toml  results.html
